--- a/personal-site/styles/globals.css
+++ b/personal-site/styles/globals.css
@@ -8,7 +8,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  overflow-x: hidden;
+  scroll-behavior: smooth;
+  background-color: rgb(31 41 55);
+  color: rgb(212 212 216);
 }
 
 a {
